fixed typo in config template

--- a/punching/config.py.template
+++ b/punching/config.py.template
@@ -3,5 +3,5 @@ Configuration of secrets and ip addresses and what not
 '''
 
 #The address of my one and only peer
-them = ('my ip address':'my port as an int')
+them = ('my ip address','my port as an int')
 
