--- a/punching/config.py.template
+++ b/punching/config.py.template
@@ -2,6 +2,8 @@
 Configuration of secrets and ip addresses and what not
 '''
 
+me = 'my.ip.add.ress','port as int'
+
 #The address of my one and only peer
 them = ('my ip address','my port as an int')
 
